log

Thu 14 Mar 2024 08:34:38 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
6c1c83f
Thu 14 Mar 2024 08:37:03 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:15:32: error: expected statement before ‘)’ token
   15 |   for(int i = 0; i < size; i++))
      |                                ^
exercises.c:17:14: error: ‘i’ undeclared (first use in this function)
   17 |       if(arr[i] > temp)
      |              ^
exercises.c:17:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3720fa5
Thu 14 Mar 2024 08:37:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
8bb7f81
Thu 14 Mar 2024 08:40:25 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:1:
exercises.c:31:1: error: expected identifier or ‘(’ before ‘{’ token
   31 | {
      | ^
Compilation failed
4739b54
Thu 14 Mar 2024 08:40:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   32 |   int temp;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
cfea475
Thu 14 Mar 2024 08:41:39 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   32 |   int temp;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
64aa802
Thu 14 Mar 2024 08:43:30 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 20/70
86f4d4d
